<?xml version="1.0"?>
<package>
  <name>bprobot</name>
  <version>1.0.0</version>
  <description>The bprobot package of liuchang</description>
  <maintainer email="liuchang@bpeer.com">lc</maintainer>
  <license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rosconsole</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>message_generation</build_depend>
        <build_depend>tf</build_depend>
        <build_depend>bfl</build_depend>
        <build_depend>visualization_msgs</build_depend>
        <build_depend>image_geometry</build_depend>
        <build_depend>dynamic_reconfigure</build_depend>
<!--..........................................................-->
        <run_depend>tf</run_depend>
        <run_depend>bfl</run_depend>
        <run_depend>visualization_msgs</run_depend>
        <run_depend>image_geometry</run_depend>
        <run_depend>dynamic_reconfigure</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rosconsole</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
</package>
